--- a/app/views/restaurant/menus/new.html.erb
+++ b/app/views/restaurant/menus/new.html.erb
@@ -49,7 +49,7 @@
 
         <div class="actions2 mt-4 offset-4">
           <%#= f.submit '新規登録', class:"btn btn-success col-2" %>
-          <%= button_tag type: :submit, class: "btn btn-success active mx-auto btn-lg" do %>
+          <%= button_tag type: :submit, class: "btn btn-success active mx-auto" do %>
             <i class="fas fa-utensils mr-2"></i>新規登録
           <% end %>
         </div>
