--- a/app/views/customer/menus/index.html.erb
+++ b/app/views/customer/menus/index.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-10 offset-1">
       <div class ="row mt-5">
-        <h4 class="col-3"><p class="p_1">店舗メニュー一覧画面 <span style="font-size: 15px"><%= "(全#{@menu_count}件)"%></span></p></h4>
+        <h4 class="col-3"><p class="p_1">店舗メニュー一覧<span style="font-size: 15px"><%= "(全#{@menu_count}件)"%></span></p></h4>
       </div>
         <div class = "row mt-4">
           <% @menus.each do |menu| %>
@@ -29,7 +29,7 @@
           <% end %>
         </div>
         <div class = "row mt-4">
-          <p class ="p_1"><%= link_to ">>店舗詳細に戻る", restaurant_path(@restaurant) %></p>
+          <%= link_to "店舗詳細に戻る", restaurant_path(@restaurant), class: "btn btn-outline-primary btn-sm" %>
         </div>
 
         <div class="mt-3"><%= paginate @menus %></div>
