--- a/app/views/customer/restaurants/show.html.erb
+++ b/app/views/customer/restaurants/show.html.erb
@@ -7,7 +7,10 @@
 
   <h5 class="mt-4">
     <%= @restaurant.name %>
-    <%= link_to "メニュー一覧", restaurant_menus_path(@restaurant.id), class:"btn btn-success ml-4"%>
+    <%= link_to restaurant_menus_path(@restaurant.id), class:"btn btn-success active ml-4" do %>
+      <i class="fas fa-clipboard-list"></i>
+      メニュー一覧
+    <% end %>
   </h5>
   <div class= "row">
     <div class= "restaurant_image col-4 mt-4 text-center">
