--- a/app/views/restaurant/homes/edit.html.erb
+++ b/app/views/restaurant/homes/edit.html.erb
@@ -78,8 +78,13 @@
           </div>
 
           <div class="row field d-grid offset-3 mt-4">
-            <%= f.submit '編集内容を保存', class:"btn btn-success" %>
-            <%= link_to "退会する", customers_confirm_path(@customer), class:"btn btn-danger ml-5"%>
+            <%= button_tag type: :submit, class: "btn btn-success active" do %>
+              <i class="fas fa-save"></i> 編集内容を保存
+            <% end %>
+            <%= link_to customers_confirm_path(@customer), class:"btn btn-danger active ml-5" do %>
+              <i class="fas fa-store-alt-slash"></i>
+              退会する
+            <% end %>
           </div>
         <% end %>
 
