--- a/app/views/customer/customers/show.html.erb
+++ b/app/views/customer/customers/show.html.erb
@@ -9,7 +9,7 @@
       <table class="table table-hover table-inverse item-show mt-4">
         <h5 class="mt-4">
           登録情報
-          <%= link_to customers_information_edit_path, class:"btn btn-outline-success ml-4" do %>
+          <%= link_to customers_information_edit_path, class:"btn btn-success active ml-4" do %>
             <i class="fas fa-user-edit"></i>
             編集する
           <% end %>
