--- a/app/views/customer/restaurants/search.html.erb
+++ b/app/views/customer/restaurants/search.html.erb
@@ -28,10 +28,10 @@
               <%= render partial: 'shared/areas', locals: { areas: Area.all } %>
             </div>
           </div>
-          
+
           <p style="text-align:center;">
             ※エリア分け詳細は
-            <%= link_to "こちら", about_path, class: "btn btn-outline-primary btn-sm" %>
+            <%= link_to "こちら", about_path, class: "btn btn-outline-info btn-sm" %>
             をご参考ください
           </p>
 
