--- a/app/views/restaurant/homes/top.html.erb
+++ b/app/views/restaurant/homes/top.html.erb
@@ -6,7 +6,7 @@
 
   <h5 class="mt-4">
     <%= @restaurant.name %>
-    <%= link_to restaurant_information_edit_path(@restaurant.id), class:"btn btn-success active ml-4" do %>
+    <%= link_to restaurant_information_edit_path(@restaurant.id), class:"btn btn-info active ml-4" do %>
       <i class="fas fa-pen-nib"></i>
       編集する
     <% end %>
