--- a/app/views/restaurant/registrations/new.html.erb
+++ b/app/views/restaurant/registrations/new.html.erb
@@ -30,7 +30,7 @@
         </div>
         <p style="text-align:center;">
           ※エリア分け詳細は
-          <%= link_to "こちら", about_path, class: "btn btn-outline-primary btn-sm" %>
+          <%= link_to "こちら", about_path, class: "btn btn-outline-info btn-sm" %>
           をご参考ください
         </p>
 
@@ -79,7 +79,7 @@
         <div class="row offset-1">
           <!--<a class ="member_registration" href = "/restaurants/sign_in">こちら</a>-->
           <p>
-            <%= link_to "こちら", new_restaurant_session_path, class: "btn btn-outline-primary btn-sm mr-2" %>
+            <%= link_to "こちら", new_restaurant_session_path, class: "btn btn-outline-info btn-sm mr-2" %>
             からログインしてください。</p>
         </div>
       <% end %>
