--- a/app/views/customer/menus/index.html.erb
+++ b/app/views/customer/menus/index.html.erb
@@ -1,10 +1,15 @@
-<h1>メニュー一覧</h1>
-<p>Find me in app/views/customer/menu/index.html.erb</p>
 <div class="container">
   <div class="row">
     <div class="col-10 offset-1">
       <div class ="row mt-5">
-        <h4 class="col-3"><p class="p_1">店舗メニュー一覧<span style="font-size: 15px"><%= "(全#{@menu_count}件)"%></span></p></h4>
+        <h4 class="col-3"><p class="p_1">検索結果<span style="font-size: 15px"><%= "(全#{@menu_count}件)"%></span></p></h4>
+      </div>
+      <div class = "row mt-4">
+        <h5>メニュー一覧</h5>
+        <%= link_to restaurant_path(@restaurant), class:"btn btn-info active btn-sm ml-3" do %>
+          <i class="fas fa-store-alt"></i>
+          店舗詳細に戻る
+        <% end %>
       </div>
         <div class = "row mt-4">
           <% @menus.each do |menu| %>
@@ -25,11 +30,11 @@
             </p>
             <p class ="p_1"><%= link_to menu.name, restaurant_menu_path(@restaurant, menu) %></p>
             <p class ="p_1"><%= "¥#{menu.price}" %></p>
+            <% @menu.menu_having_allergies.each do |e| %>
+              <td><%= e.allergy.allergen %></td>
+            <% end %>
             </div>
           <% end %>
-        </div>
-        <div class = "row mt-4">
-          <%= link_to "店舗詳細に戻る", restaurant_path(@restaurant), class: "btn btn-outline-primary btn-sm" %>
         </div>
 
         <div class="mt-3"><%= paginate @menus %></div>
