--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,6 +117,11 @@
                   <% end %>
                 </li>
                 <li>
+                  <%= link_to restaurant_about_path, class:"nav-link text-light" do %>
+                    <strong>About</strong>
+                  <% end %>
+                </li>
+                <li>
                   <%= link_to destroy_restaurant_session_path, method: :delete, class:"nav-link text-light" do %>
                     <strong>ログアウト</strong>
                   <% end %>
