--- a/app/views/restaurant/menus/show.html.erb
+++ b/app/views/restaurant/menus/show.html.erb
@@ -16,6 +16,7 @@
           <h5><strong><%= @menu.name %></strong></h5>
           <div class="mt-3"><%= @menu.introduction %></div>
           <div class="mt-3">
+            <p class="menu_allergen"><strong>アレルゲン</strong></p>
             <% @menu.menu_having_allergies.each do |e| %>
               <td><%= e.allergy.allergen %></td>
             <% end %>
@@ -23,7 +24,7 @@
             <!--<th>税込価格</th>-->
           <div class="mt-5"><span>税抜価格（税込価格）</span><br><strong class="price"><%= "#{@menu.price}円" %>(<%= "#{@menu.with_tax_price}円" %>)　</strong></div>
           <div class="mt-5">
-            <%= link_to edit_restaurant_restaurant_menu_path(@menu), class:"btn btn-success active" do %>
+            <%= link_to edit_restaurant_restaurant_menu_path(@menu), class:"btn btn-info active" do %>
               <i class="fas fa-pen-nib"></i>
               編集する
             <% end %>
