Change button of views/customer

--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -42,7 +42,7 @@
 
         <p style="text-align:center;">
           ※エリア分け詳細は
-          <%= link_to "こちら", about_path, class: "btn btn-outline-primary btn-sm" %>
+          <%= link_to "こちら", about_path, class: "btn btn-outline-info btn-sm" %>
           をご参考ください
         </p>
 
@@ -75,7 +75,7 @@
         <h6 class="col-3 mt-4">既に登録済みの方</h6>
         <div class="row offset-1">
           <p>
-            <%= link_to "こちら", new_customer_session_path, class: "btn btn-outline-primary btn-sm" %>
+            <%= link_to "こちら", new_customer_session_path, class: "btn btn-outline-info btn-sm" %>
             からログインしてください。
           </p>
         </div>
