--- a/app/views/customer/menus/show.html.erb
+++ b/app/views/customer/menus/show.html.erb
@@ -16,7 +16,7 @@
           <h5><strong><%= @menu.name %></strong></h5>
           <div class="mt-3"><%= @menu.introduction %></div>
           <div class="mt-3">
-            
+            <p class="menu_allergen"><strong>アレルゲン</strong></p>
             <% @menu.menu_having_allergies.each do |e| %>
               <td><%= e.allergy.allergen %></td>
             <% end %>
@@ -24,8 +24,11 @@
             <!--<th>税込価格</th>-->
           <div class="mt-5"><span>税抜価格（税込価格）</span><br><strong class="price"><%= "#{@menu.price}円" %>(<%= "#{@menu.with_tax_price}円" %>)　</strong></div>
         </div>
-        <div class = "row mt-4">
-          <p class ="p_1"><%= link_to ">>メニュー一覧に戻る", restaurant_menus_path(@restaurant) %></p>
+        <div class = "mt-4 offset-4">
+          <%= link_to restaurant_menus_path(@restaurant), class:"btn btn-info active btn-sm ml-3" do %>
+            <i class="fas fa-clipboard-list"></i>
+            メニュー一覧に戻る
+          <% end %>
         </div>
       </div>
     </div>
