Add flashing characters to screen views/restaurant

--- a/app/views/customer/customers/confirm.html.erb
+++ b/app/views/customer/customers/confirm.html.erb
@@ -1,6 +1,9 @@
 <div class= "container">
   <div class='row mb-3 mt-5'>
     <div class='col-10 offset-1'>
+      <div class='flashing offset-4 mt-2'>
+        <p>※現在登録されているデータは架空です</p>
+      </div>
       <h5 class="mt-5 text-center"><strong>本当に退会しますか？</strong></h5>
       <p class="mt-4 text-center">
         <i class="fas fa-exclamation-triangle"></i>
