--- a/app/views/customer/customers/show.html.erb
+++ b/app/views/customer/customers/show.html.erb
@@ -6,6 +6,10 @@
       <% end %>
       <h4 class="col-4 mt-5">マイページ</h4>
 
+      <div class='flashing mt-2'>
+        <p>※現在登録されているデータは架空です</p>
+      </div>
+
       <table class="table table-hover table-inverse item-show mt-4">
         <h5 class="mt-4">
           登録情報
