--- a/app/views/customer/restaurants/index.html.erb
+++ b/app/views/customer/restaurants/index.html.erb
@@ -4,6 +4,9 @@
       <div class ="row mt-5">
         <h4 class="col-3"><p class="p_1">飲食店一覧 <span style="font-size: 15px"><%= "(全#{@restaurant_count}件)"%></span></p></h4>
       </div>
+      <div class='flashing mt-2'>
+        <p>※現在登録されているデータは架空です</p>
+      </div>
       <table class="table table-hover mt-4">
         <thead class="table-secondary">
           <th>店名</th>
