--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -153,3 +153,13 @@ input[type="checkbox"]{
 .menu_allergen{
   margin-bottom: 0;
 }
+
+.flashing{
+  animation: blink 0.8s ease-in-out infinite alternate;
+  color: red;
+}
+
+@keyframes blink{
+  0%   {opacity: 0;}
+  100% {opacity: 1;}
+}
