--- a/app/views/customer/customers/edit.html.erb
+++ b/app/views/customer/customers/edit.html.erb
@@ -3,6 +3,10 @@
     <div class="col-10 offset-1">
       <h4 class="col-3 mt-5">会員情報編集</h4>
 
+      <div class='flashing mt-2'>
+        <p>※現在登録されているデータは架空です</p>
+      </div>
+
       <div class="mt-4">
         <%= form_with model: @customer, url: customers_information_path, method: :patch do |f| %>
           <div class="row mt-3">
