--- a/app/views/customer/menus/show.html.erb
+++ b/app/views/customer/menus/show.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <!--<table class="table table-hover table-inverse mt-4 ml-4 col-md-6">-->
+      <div class='flashing mt-5 offset-2'>
+        <p>※現在登録されているデータは架空です</p>
+      </div>
       <div class="row mt-5">
         <div class="col-5 mt-5 text-center">
           <div class="menu_image">
@@ -12,6 +14,7 @@
             <% end %>
           </div>
         </div>
+
         <div class="col-7 mt-5 menu_show">
           <h5><strong><%= @menu.name %></strong></h5>
           <div class="mt-3"><%= @menu.introduction %></div>
@@ -24,6 +27,7 @@
             <!--<th>税込価格</th>-->
           <div class="mt-5"><span>税抜価格（税込価格）</span><br><strong class="price"><%= "#{@menu.price}円" %>(<%= "#{@menu.with_tax_price}円" %>)　</strong></div>
         </div>
+
         <div class = "mt-4 offset-4">
           <%= link_to restaurant_menus_path(@restaurant), class:"btn btn-info active btn-sm ml-3" do %>
             <i class="fas fa-clipboard-list"></i>
