--- a/app/views/restaurant/homes/top.html.erb
+++ b/app/views/restaurant/homes/top.html.erb
@@ -4,6 +4,10 @@
   <% end %>
   <h4 class="col-4 mt-5">店舗詳細</h4>
 
+  <div class='flashing mt-2'>
+    <p>※現在登録されているデータは架空です</p>
+  </div>
+
   <h5 class="mt-4">
     <%= @restaurant.name %>
     <%= link_to restaurant_information_edit_path(@restaurant.id), class:"btn btn-info active ml-4" do %>
