--- a/app/views/restaurant/homes/confirm.html.erb
+++ b/app/views/restaurant/homes/confirm.html.erb
@@ -14,11 +14,11 @@
 
       <div class="mt-4 text-center">
         <%= link_to restaurant_homes_path, class:"btn btn-primary active ml-5" do %>
-          <i class="fa-solid fa-shop"></i>
+          <i class="fas fa-store-alt"></i>
           退会しない
         <% end %>
         <%= link_to restaurant_out_path,"data-confirm" => "本当に退会しますか？", method: :patch, class:"btn btn-danger active ml-5" do %>
-          <i class="fa-solid fa-shop-slash"></i>
+          <i class="fas fa-store-alt-slash"></i>
           退会する
         <% end %>
       </div>
