--- a/app/views/admin/allergies/index.html.erb
+++ b/app/views/admin/allergies/index.html.erb
@@ -5,20 +5,20 @@
 
 
       <div class="row">
-        <div class='col-5 mt-5'>
+        <div class='col-md-7 mt-5'>
           <%= form_with model: @allergy, url: admin_allergies_path, method: :post do |f| %>
 
-            <div class="field d-grid col-10 mt-4">
+            <div class="field d-grid col-11 mt-4">
               <%= f.label :アレルゲン, class: "w-25" %>
               <%= f.text_field :allergen %>
             </div>
             <div class="row form-group mt-4 offset-3">
-              <%= f.submit '新規登録', class:"btn btn-success col-3" %>
+              <%= f.submit '新規登録', class:"btn btn-success col-4" %>
             </div>
           <% end %>
         </div>
 
-        <table class="table table-hover col-6">
+        <table class="table table-hover col-5">
           <thead class="table-secondary">
             <th>アレルゲン</th>
             <th></th>
