--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -2,6 +2,11 @@
   <div class="row">
     <div class="col-10 offset-1">
       <h4 class="col-2 mt-5">会員一覧</h4>
+
+      <div class='flashing mt-2'>
+        <p>※現在登録されているデータは架空です</p>
+      </div>
+
       <table class="table table-hover mt-4">
         <thead class="table-secondary">
           <th>会員ID</th>
@@ -9,6 +14,7 @@
           <th>メールアドレス</th>
           <th>退会ステーサス</th>
         </thead>
+
         <tbody>
           <% @customers.each do |customer| %>
             <tr>
