--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,9 +1,12 @@
-<h1>管理者トップページ(店舗一覧)</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
 <div class="container">
   <div class="row">
     <div class="col-10 offset-1">
       <h4 class="col-2 mt-5">会員一覧</h4>
+
+      <div class='flashing mt-2'>
+        <p>※現在登録されているデータは架空です</p>
+      </div>
+
       <table class="table table-hover mt-4">
         <thead class="table-secondary">
           <th>会員ID</th>
@@ -11,6 +14,7 @@
           <th>メールアドレス</th>
           <th>退会ステーサス</th>
         </thead>
+
         <tbody>
           <% @restaurants.each do |restaurant| %>
             <tr>
