--- a/app/views/admin/restaurants/edit.html.erb
+++ b/app/views/admin/restaurants/edit.html.erb
@@ -3,18 +3,21 @@
     <div class="col-10 offset-1">
       <h4 class="col-6 mt-5"><%= "#{@restaurant.name}の店舗情報編集" %></h4>
 
+      <div class='flashing mt-2'>
+        <p>※現在登録されているデータは架空です</p>
+      </div>
+
       <%= form_with model: @restaurant, url:admin_restaurant_path, method: :patch do |f| %>
 
       　<div class="row field d-grid text-center mt-3">
-          <%= f.label :会員ID, class: "col-md-3" %>
-          <div class="col-md-2">
+          <%= f.label :会員ID, class: "col-md-3 text-left" %>
+          <div class="col-md-2 ml-2">
             <%= @restaurant.id %>
           </div>
         </div>
 
-
         <div class="row field d-grid text-center">
-          <%= f.label :店名, class: "col-md-3 text-left" %>
+          <%= f.label :店名, class: "col-md-4 text-left" %>
           <%= f.text_field :name, autofocus: true, required: true, class: "col-md-3" %>
         </div>
 
@@ -41,7 +44,7 @@
         </div>
 
         <div class="row field d-grid text-center mt-4">
-          <%= f.label :メールアドレス, class: "col-md-3 text-left" %>
+          <%= f.label :メールアドレス, class: "col-md-4 text-left" %>
           <%= f.email_field :email, autofocus: true, class: "col-md-6" %>
         </div>
 
@@ -56,13 +59,14 @@
         </div>
 
         <div class="row field d-grid text-center mt-3">
+          <p class="col-md-4 text-left">会員状況</p>
           <%= f.radio_button :is_valid, true %>
-          <%= f.label :is_valid, "有効" %>
-          <%= f.radio_button :is_valid, false %>
-          <%= f.label :is_valid, "退会" %>
+          <%= f.label :is_valid, "有効", class: "valid ml-1" %>
+          <%= f.radio_button :is_valid, false, class: "ml-4" %>
+          <%= f.label :is_valid, "退会", class: "valid ml-1" %>
         </div>
 
-        <div class="row form-group mt-4 ml-26">
+        <div class="row form-group offset-4 mt-4 ml-26">
           <%= f.submit '変更を保存', class:"btn btn-success" %>
         </div>
       <% end %>
