--- a/app/views/restaurant/menus/edit.html.erb
+++ b/app/views/restaurant/menus/edit.html.erb
@@ -5,6 +5,10 @@
       <div class="menu_edit">
         <h4 class="col-4 mt-5">メニュー編集</h4>
 
+        <div class='flashing mt-2'>
+          <p>※現在登録されているデータは架空です</p>
+        </div>
+
         <%= form_with model: @menu ,url: restaurant_restaurant_menu_path, method: :patch do |f| %>
           <div class="row field d-grid text-center mt-4">
             <%= f.label :料理画像, class: "col-md-4 text-left" %>
