--- a/app/views/restaurant/menus/show.html.erb
+++ b/app/views/restaurant/menus/show.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <!--<table class="table table-hover table-inverse mt-4 ml-4 col-md-6">-->
+      <div class='flashing mt-5 offset-2'>
+        <p>※現在登録されているデータは架空です</p>
+      </div>
+
       <div class="row mt-5">
         <div class="col-5 mt-5 text-center">
           <div class="menu_image">
@@ -12,6 +15,7 @@
             <% end %>
           </div>
         </div>
+
         <div class="col-7 mt-5 item_show">
           <h5><strong><%= @menu.name %></strong></h5>
           <div class="mt-3"><%= @menu.introduction %></div>
