--- a/app/views/customer/homes/about.html.erb
+++ b/app/views/customer/homes/about.html.erb
@@ -31,19 +31,19 @@
               <% end %>
               <p class="about"><strong>大阪府</strong></p>
             </div>
-            <div class="ml-4">
+            <div class="ml-md-4">
             　<%= link_to asset_path('kyoto.jpg'), "data-lightbox" => 'kyoto.jpg' do %>
                 <%= image_tag 'kyoto.jpg', height: '250', :style=>"width:300;"%>
               <% end %>
               <p class="about"><strong>京都府</strong></p>
             </div>
-            <div class="ml-4">
+            <div class="ml-md-4">
             　<%= link_to asset_path('hyogo.jpg'), "data-lightbox" => 'hyogo.jpg' do %>
                 <%= image_tag 'hyogo.jpg', height: '250', :style=>"width:300;"%>
               <% end %>
               <p class="about"><strong>兵庫県</strong></p>
             </div>
-            <div class="ml-3">
+            <div class="ml-md-3">
             　<%= link_to asset_path('nara.jpg'), "data-lightbox" => 'nara.jpg' do %>
                 <%= image_tag 'nara.jpg', height: '250', :style=>"width:300;"%>
               <% end %>
@@ -55,7 +55,7 @@
               <% end %>
               <p class="about"><strong>和歌山県</strong></p>
             </div>
-            <div class="ml-4">
+            <div class="ml-md-4">
             　<%= link_to asset_path('shiga.jpg'), "data-lightbox" => 'shiga.jpg' do %>
                 <%= image_tag 'shiga.jpg', height: '250', :style=>"width:300;"%>
               <% end %>
