--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to about_path, class:"nav-link text-light" do %>
+                  <%= link_to about_path, class:"nav-link text-light", data: {"turbolinks" => false} do %>
                     <strong>About</strong>
                   <% end %>
                 </li>
@@ -117,7 +117,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to restaurant_about_path, class:"nav-link text-light" do %>
+                  <%= link_to restaurant_about_path, class:"nav-link text-light", data: {"turbolinks" => false} do %>
                     <strong>About</strong>
                   <% end %>
                 </li>
@@ -138,7 +138,7 @@
             <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
               <ul class="navbar-nav ml-auto">
                 <li>
-                  <%= link_to about_path, class:"nav-link text-light" do %>
+                  <%= link_to about_path, class:"nav-link text-light", data: {"turbolinks" => false} do %>
                     <strong>About</strong>
                   <% end %>
                 </li>
