--- a/app/views/customer/restaurants/index.html.erb
+++ b/app/views/customer/restaurants/index.html.erb
@@ -2,34 +2,36 @@
   <div class="row">
     <div class="col-10 offset-1">
       <div class ="row mt-5">
-        <h4 class="col-3"><p class="p_1">飲食店一覧 <span style="font-size: 15px"><%= "(全#{@restaurant_count}件)"%></span></p></h4>
+        <h4 class="col-md-3"><p class="p_1">飲食店一覧 <span style="font-size: 15px"><%= "(全#{@restaurant_count}件)"%></span></p></h4>
       </div>
       <div class='flashing mt-2'>
         <p>※現在登録されているデータは架空です</p>
       </div>
-      <table class="table table-hover mt-4">
-        <thead class="table-secondary">
-          <th>店名</th>
-          <th>住所</th>
-          <th>定休日</th>
-        </thead>
-        <tbody>
-          <% @restaurants.each do |restaurant| %>
-            <tr>
-              <td>
-                <% if restaurant.image.attached? %>
-                  <%= image_tag restaurant.get_image(60,50) %>
-                <% else %>
-                  <%= image_tag 'default-image.jpg', size: "60x50" %>
-                <% end %>
-                <%= link_to restaurant.name, restaurant_path(restaurant.id) %>
-              </td>
-              <td><%= restaurant.address %></td>
-              <td><%= restaurant.regular_holiday %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+      <div class="table-responsive-md">
+        <table class="table table-hover mt-4">
+          <thead class="table-secondary">
+            <th>店名</th>
+            <th>住所</th>
+            <th>定休日</th>
+          </thead>
+          <tbody>
+            <% @restaurants.each do |restaurant| %>
+              <tr>
+                <td>
+                  <% if restaurant.image.attached? %>
+                    <%= image_tag restaurant.get_image(60,50) %>
+                  <% else %>
+                    <%= image_tag 'default-image.jpg', size: "60x50" %>
+                  <% end %>
+                  <%= link_to restaurant.name, restaurant_path(restaurant.id) %>
+                </td>
+                <td><%= restaurant.address %></td>
+                <td><%= restaurant.regular_holiday %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
