--- a/app/views/restaurant/homes/confirm.html.erb
+++ b/app/views/restaurant/homes/confirm.html.erb
@@ -1,7 +1,7 @@
 <div class= "container">
   <div class='row mb-3 mt-5'>
     <div class='col-10 offset-1'>
-      <div class='flashing offset-4 mt-2'>
+      <div class='flashing offset-md-4 mt-2'>
         <p>※現在登録されているデータは架空です</p>
       </div>
 
@@ -12,12 +12,12 @@
         退会する場合は「退会する」をクリックしてください
       </p>
 
-      <div class="mt-4 text-center">
-        <%= link_to restaurant_homes_path, class:"btn btn-primary active ml-5" do %>
+      <div class="text-center">
+        <%= link_to restaurant_homes_path, class:"btn btn-primary active ml-md-5 mt-4" do %>
           <i class="fas fa-store-alt"></i>
           退会しない
         <% end %>
-        <%= link_to restaurant_out_path,"data-confirm" => "本当に退会しますか？", method: :patch, class:"btn btn-danger active ml-5" do %>
+        <%= link_to restaurant_out_path,"data-confirm" => "本当に退会しますか？", method: :patch, class:"btn btn-danger active ml-md-5 mt-4" do %>
           <i class="fas fa-store-alt-slash"></i>
           退会する
         <% end %>
