--- a/app/views/restaurant/registrations/new.html.erb
+++ b/app/views/restaurant/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-11 offset-1">
-      <h4 class="col-3 mt-5">新規飲食店登録</h4>
+      <h4 class="col-md-3 mt-5">新規飲食店登録</h4>
 
       <%= form_with model: @restaurant, url: restaurant_registration_path, id: 'new_restaurant', class: 'new_restaurant', local: true do  |f| %>
         <%= render "restaurant/shared/error_messages", resource: resource %>
@@ -28,9 +28,9 @@
             <%= render partial: 'shared/restaurant_areas', locals: { areas: Area.all } %>
           </div>
         </div>
-        <p style="text-align:center;">
+        <p class="mt-2", style="text-align:center;">
           ※エリア分け詳細は
-          <%= link_to "こちら", about_path, class: "btn btn-outline-info btn-sm" %>
+          <%= link_to "こちら", about_path, class: "btn btn-outline-info btn-sm", data: {"turbolinks" => false} %>
           をご参考ください
         </p>
 
@@ -70,16 +70,16 @@
         </div>
 
         <div class="actions2 mt-4 offset-4">
-          <%= button_tag type: :submit, class: "btn btn-success active mx-auto" do %>
+          <%= button_tag type: :submit, class: "btn btn-success active" do %>
             <i class="fas fa-store-alt"></i> 新規登録
           <% end %>
         </div>
 
-        <h6 class="col-3 mt-4">既に登録済みの方</h6>
-        <div class="row offset-1">
+        <h6 class="col-md-3 mt-4">既に登録済みの方</h6>
+        <div class="row offset-md-1">
           <!--<a class ="member_registration" href = "/restaurants/sign_in">こちら</a>-->
           <p>
-            <%= link_to "こちら", new_restaurant_session_path, class: "btn btn-outline-info btn-sm mr-2" %>
+            <%= link_to "こちら", new_restaurant_session_path, class: "btn btn-outline-info btn-sm mr-1" %>
             からログインしてください。</p>
         </div>
       <% end %>
